--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="ui-enhancements.css">
     <style>
         @keyframes blinkSlow {
             0%, 100% { opacity: 1; }
@@ -37,10 +38,7 @@
             <p class="slogan mb-0">Smart Access to Project Activities</p>
         </div>
         <div class="sidebar-search">
-            <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-search"></i></span>
-                <input type="text" class="form-control form-control-sm" placeholder="Search system..." id="searchInput">
-            </div>
+            <input type="text" class="form-control form-control-sm" placeholder="Search system..." id="searchInput" style="width: 100%; padding: 0.6rem 1rem;">
         </div>
         <div class="tree-view-container" id="treeView">
             <!-- Tree nodes will be injected here by JavaScript -->
@@ -94,15 +92,26 @@
                     </li>
                 </ul>
                 <div class="ms-auto d-flex align-items-center d-none d-lg-flex" id="header-nav-items">
+                    <!-- Header Search -->
+                    <div class="header-search me-3">
+                        <div class="input-group input-group-sm">
+                            <span class="input-group-text bg-transparent border-0 text-white-50">
+                                <i class="bi bi-search"></i>
+                            </span>
+                            <input type="text" class="form-control bg-transparent border-0 text-white" 
+                                   id="headerSearchInput" 
+                                   placeholder="Search items..." 
+                                   style="width: 200px; color: white !important;">
+                        </div>
+                        <div id="headerSearchResults" class="position-absolute bg-white border rounded shadow-lg mt-1 d-none" 
+                             style="width: 300px; max-height: 300px; overflow-y: auto; z-index: 1060;"></div>
+                    </div>
+                    
                     <!-- Quick Actions -->
                     <div class="btn-group me-2" role="group">
-                        <button class="btn btn-outline-light btn-sm" id="refreshDataBtn" data-bs-toggle="tooltip" title="Refresh Data (Ctrl+R)">
+                        <button class="btn btn-outline-light btn-sm" id="refreshDataBtn" data-bs-toggle="tooltip" title="Refresh Data (Ctrl+R)" style="background: transparent; border-color: rgba(255,255,255,0.3);">
                             <i class="bi bi-arrow-clockwise"></i>
                         </button>
-                        <button class="btn btn-outline-light btn-sm" id="quickSearchBtn" data-bs-toggle="tooltip" title="Search Items (Ctrl+F)">
-                            <i class="bi bi-search"></i>
-                        </button>
-
                     </div>
                     <a class="header-nav-link" href="#" id="presentationModeBtn" onclick="initPresentationMode()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Presentation Mode (P)"><i class="bi bi-easel"></i></a>
                     <a class="header-nav-link" href="https://mega.nz/folder/YydB0QoR#ri5vAK9S4qhqE-AnxE4A8Q" target="_blank" rel="noopener noreferrer" id="dbStorageBtn" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Database Storage (Ctrl+D)"><i class="bi bi-database"></i></a>
@@ -185,7 +194,7 @@
                                             <tr id="dataTableFilters" class="filter-row">
                                                 <!-- Filter inputs will be injected here -->
                                             </tr>
-                                            <tr id="dataTableHead">
+                                            <tr id="dataTableHead" style="position: sticky; top: 0; z-index: 10; background: #2d3748; color: #ffffff; font-weight: bold;">
                                                 <!-- Table headers will be injected here -->
                                             </tr>
                                         </thead>
@@ -343,6 +352,8 @@
     </script>
     <script src="utils.js"></script>
     <script src="presentation-mode.js"></script>
+    <script src="ui-init.js"></script>
+    <script src="header-search.js"></script>
     <script src="main.js?v=1.2" defer></script>
     <script>
         if ('serviceWorker' in navigator) {
