--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAPRA Dashboard (Bootstrap)</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="libs/css/bootstrap.min.css" rel="stylesheet">
+    <link href="libs/css/bootstrap-icons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="ui-enhancements.css">
@@ -15,7 +15,7 @@
             50% { opacity: 0.3; }
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="libs/js/sweetalert2.min.js"></script>
     <script type="importmap">
     {
       "imports": {
@@ -317,11 +317,11 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+    <script src="libs/js/bootstrap.bundle.min.js"></script>
+    <script src="libs/js/papaparse.min.js"></script>
+    <script src="libs/js/xlsx.full.min.js"></script>
+    <script src="libs/js/chart.umd.min.js"></script>
+    <script src="libs/js/jszip.min.js"></script>
     <script>
         // Keyboard shortcut for presentation mode
         document.addEventListener('keydown', (e) => {
