--- a/pages/Work_flow.html
+++ b/pages/Work_flow.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>داشبورد مانیتورینگ گردش اسناد</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-    <script src="https://unpkg.com/papaparse@5.3.2/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="../libs/css/tailwind.min.css">
+    <script src="../libs/js/chart.umd.min.js"></script>
+    <script src="../libs/js/papaparse.min.js"></script>
+    <script src="../libs/js/xlsx.full.min.js"></script>
+    <link rel="stylesheet" href="../libs/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../libs/fonts/vazir.css">
     <style>
-        @import url('https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css');
         body { font-family: 'Vazir', sans-serif; }
         .tooltip-custom { position: absolute; background: rgba(0,0,0,0.9); color: white; padding: 8px 12px; border-radius: 6px; font-size: 12px; pointer-events: none; z-index: 1000; display: none; }
         .heatmap-cell { cursor: pointer; transition: all 0.2s; }
